--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
-    "mysql": "^2.17.1"
+    "mysql": "^2.17.1",
+    "nodemon": "^2.0.1"
   }
 }
