--- a/openotog/package.json
+++ b/openotog/package.json
@@ -6,11 +6,13 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
     "file-saver": "^2.0.2",
+    "jwt-decode": "^2.2.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "react-syntax-highlighter": "^11.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
