--- a/openotog/package.json
+++ b/openotog/package.json
@@ -5,20 +5,27 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
+    "css-loader": "^3.4.0",
     "file-saver": "^2.0.2",
+    "http-proxy-middleware": "^0.20.0",
     "jwt-decode": "^2.2.0",
+    "path": "^0.12.7",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
-    "react-syntax-highlighter": "^11.0.2"
+    "react-scripts": "^3.3.0",
+    "react-syntax-highlighter": "^11.0.2",
+    "style-loader": "^1.0.2",
+    "webpack-pwa-manifest": "^4.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "buildre": "react-scripts build",
+    "build": "webpack --mode production",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "webpack-dev-server --open"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -35,5 +42,17 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:8000"
+  "proxy": "http://localhost:8000",
+  "devDependencies": {
+    "@babel/core": "^7.7.7",
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "@babel/preset-env": "^7.7.7",
+    "@babel/preset-react": "^7.7.4",
+    "babel-loader": "^8.0.6",
+    "html-webpack-plugin": "^3.2.0",
+    "http-server": "^0.12.0",
+    "webpack-cli": "^3.3.10",
+    "webpack-manifest-plugin": "^2.2.0",
+    "workbox-webpack-plugin": "^4.3.1"
+  }
 }
